# bedrock

bedrock/: Cargo.toml
bedrock/src/: bedrock.rs  lib.rs
pkg/: manifest.json  metadata.json
