[package]
name = "bedrock"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kinode_process_lib = { git = "ssh://git@github.com/uqbar-dao/process_lib.git", rev = "9a579dd" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "efcc759" }
futures = "0.3.21"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
